--- a/Alibaba/Base.lproj/Main.storyboard
+++ b/Alibaba/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xg4-OB-cRU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="uOb-Dc-Lws">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -190,8 +190,41 @@
                     <view key="view" contentMode="scaleToFill" id="Trc-s1-EGx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t4g-My-F6Q">
+                                <rect key="frame" x="20" y="72" width="34" height="32"/>
+                                <color key="backgroundColor" red="0.1019607857" green="0.73725491759999995" blue="0.61176472900000001" alpha="0.51810344829999999" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="C9n-ti-a7M"/>
+                                    <constraint firstAttribute="width" constant="34" id="EFQ-TM-dM1"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x0B-8K-GYp">
+                                <rect key="frame" x="321" y="72" width="34" height="32"/>
+                                <color key="backgroundColor" red="0.1019607857" green="0.73725491759999995" blue="0.61176472900000001" alpha="0.51810344829999999" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="34" id="cAn-Ru-VtA"/>
+                                    <constraint firstAttribute="height" constant="32" id="w25-11-VcV"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vKR-Ye-Tfv">
+                                <rect key="frame" x="62" y="72" width="32" height="32"/>
+                                <color key="backgroundColor" red="0.82745099070000006" green="0.32941177490000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="t4g-My-F6Q" firstAttribute="top" secondItem="zlL-6u-utQ" secondAttribute="bottom" constant="52" id="6Jg-rF-tBV"/>
+                            <constraint firstItem="t4g-My-F6Q" firstAttribute="leading" secondItem="Trc-s1-EGx" secondAttribute="leading" constant="20" id="PjS-HM-QnV"/>
+                            <constraint firstAttribute="trailing" secondItem="x0B-8K-GYp" secondAttribute="trailing" constant="20" id="kHr-6h-nik"/>
+                            <constraint firstItem="x0B-8K-GYp" firstAttribute="top" secondItem="zlL-6u-utQ" secondAttribute="bottom" constant="52" id="soW-a2-wRb"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="distantView" destination="vKR-Ye-Tfv" id="lGy-zH-MfM"/>
+                        <outlet property="goalView" destination="x0B-8K-GYp" id="j5M-kC-a4m"/>
+                        <outlet property="startView" destination="t4g-My-F6Q" id="Xck-dv-Eah"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TsG-dP-fFP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
